--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -1,6 +1,9 @@
 {% if role == 'Admin' %}
     {% include 'admin/admin_header.html' %}
+{% else %}
+    {% include 'sd_header.html' %}
 {% endif %}
+
 <div id="layoutSidenav_content">
     {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -14,8 +17,8 @@
     <main>
         <!-- Add Doctor Form Content Here -->
         <div class="sd-container">
-            <h2 class="sd-form">Add Manager</h2>
-            <form action="{{ url_for('manager.add_manager') }}" method="post" class="sd-form" enctype="multipart/form-data">
+            <h2 class="sd-form">Add Super Distributor</h2>
+            <form action="{{ url_for('super_distributor.add_super_distributor') }}" method="post" class="sd-form">
                 <div class="sd-row">
                     <input name="name" type="text" placeholder="Full Name*" required>
                 </div>
@@ -23,14 +26,11 @@
                     <input name="email" type="email" placeholder="Email*" required>
                 </div>
                 <div class="sd-row">
-                    <input name="contact" type="text" placeholder="Mobile*" required>
+                    <input name="mobile_number" type="text" placeholder="Mobile*" required>
                 </div>
                 <div class="sd-row">
                     <input name="password" type="password" placeholder="Password*" required>
-                </div>
-                <div class="sd-row">
-                    <label for="image">Profile Image</label>
-                    <input type="file" class="form-control-file" id="image" name="image">
+                    <input type="password" placeholder="Re-Enter Password*" required>
                 </div>
                 <!-- <div class="sd-row">
                     <input type="text" placeholder="Designation">
@@ -46,10 +46,6 @@
                     <label>Upload</label>
                     <input type="file">
                 </div> -->
-                <!--<div class="form-group">
-                <label for="super_distributor_id">Super Distributor ID</label>
-                <input type="number" class="form-control" id="super_distributor_id" name="super_distributor_id" placeholder="Enter super distributor ID">
-                </div>-->
                 <br>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Submit</button>
@@ -59,4 +55,6 @@
         <!-- End of Add Doctor Form Content -->
     </main>
 
+    
 {% include 'sd_footer.html' %}
+
