--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -1,5 +1,7 @@
 {% if role == 'Admin' %}
     {% include 'admin/admin_header.html' %}
+{% elif role == 'Manager' %}
+    {% include 'manager_header.html' %}
 {% else %}
     {% include 'sd_header.html' %}
 {% endif %}
