did some changes in kitchen and order file.

--- a/templates/kitchen/add_kitchen.html
+++ b/templates/kitchen/add_kitchen.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="sd-row">
                     <input name="state" type="text" placeholder="State*" required>
-                    <input name="country" type="text" placeholder="Country*" required>
+                    <input name="pin_code" type="text" placeholder="pin-code*" required>
                 </div>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Submit</button>
