Added routes and UI for add cuisine and food item and also completed kitchen dashboard.

--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -42,6 +42,7 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
+                            <h6>Welcome, {{ user_name }}!</h6>
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="{{ url_for('distributor.distributor_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
