--- a/templates/kitchen/all_kitchens.html
+++ b/templates/kitchen/all_kitchens.html
@@ -6,6 +6,8 @@
     {% include 'super_distributor/sd_header.html'%}
 {% elif role == "Distributor" %}
     {% include 'distributor/d_header.html'%}
+{% elif role == "Kitchen" %}
+    {% include 'kitchen/kitchen_header.html'%}
 {% endif %}
 
 <div id="layoutSidenav_content">
