Added image field in models

--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -127,7 +127,7 @@
 
                         <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
-                        Admin
+                        {{ role }}
                     </div>
                 </nav>
             </div>
