--- a/templates/distributor/d_all_distributor.html
+++ b/templates/distributor/d_all_distributor.html
@@ -9,7 +9,7 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            <h2 class="text-center">Distibutors List</h2>
+            <h2 class="text-center">Distributors List</h2>
 
         <!-- Display flash messages for success or error -->
         {% with messages = get_flashed_messages(with_categories=true) %}
