--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -34,27 +34,22 @@
                     <input name="password" type="password" placeholder="Password*" required>
                     <input type="password" placeholder="Re-Enter Password*" required>
                 </div>
-                <!-- <div class="sd-row">
-                    <input type="text" placeholder="Designation">
-                    <select required>
-                        <option value="" disabled selected>Select Department*</option>
-                        <option value="cardiology">Cardiology</option>
-                        <option value="neurology">Neurology</option> -->
-                        <!-- Add more options as needed -->
-                    <!-- </select>
-                </div> -->
-                <!-- <textarea class="sd-textarea" placeholder="Address"></textarea> -->
-                <!-- <div class="sd-upload">
-                    <label>Upload</label>
-                    <input type="file">
-                </div> -->
+                <br>
+                <div class="sd-row">
+                    <label for="manager">Select Manager:</label>
+                    <select name="manager" id="manager" required>
+                        <option value="">-- Select Manager --</option>
+                        {% for manager in managers %}
+                            <option value="{{ manager.id }}">{{ manager.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <br>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Submit</button>
                 </div>
             </form>
         </div>
-        <!-- End of Add Doctor Form Content -->
     </main>
 
     
